<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/splashImageView"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:src="@drawable/mark"
            android:contentDescription="@string/mark_image" />

        <ImageView
            android:id="@+id/splashImageLogo"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_below="@id/splashImageView"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo_image" />

        <TextView
            android:id="@+id/splashTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/splashImageLogo"
            android:layout_alignEnd="@id/splashImageLogo"
            android:layout_marginBottom="-30dp"
            android:text="@string/user"
            android:textColor="@color/design_default_color_primary"
            android:textSize="16sp"
            android:visibility="invisible"/>

    </RelativeLayout>

</RelativeLayout>