<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.activity.DetailUserActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">


            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.107"
                tools:visibility="visible" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shimmer_auto_start="true"
                app:shimmer_direction="left_to_right"
                app:shimmer_dropoff="0.5">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/user_avatar"
                    android:scaleType="centerCrop"
                    android:src="@drawable/shimmer_avatar_mask"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.facebook.shimmer.ShimmerFrameLayout>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shimmer_avatar"
                app:shimmer_auto_start="true"
                app:shimmer_direction="left_to_right">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/username"
                    android:src="@drawable/shimmer_text_mask"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </com.facebook.shimmer.ShimmerFrameLayout>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shimmer_name"
                app:shimmer_auto_start="true"
                app:shimmer_direction="left_to_right"
                app:shimmer_duration="1500">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/type"
                    android:src="@drawable/shimmer_textlong_mask"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </com.facebook.shimmer.ShimmerFrameLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/shimmer_bio">

                <TableRow tools:ignore="UselessParent">

                    <com.facebook.shimmer.ShimmerFrameLayout
                        android:id="@+id/shimmer_public"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="8dp"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        app:shimmer_auto_start="true"
                        app:shimmer_direction="left_to_right"
                        app:shimmer_duration="1500">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="8dp"
                            android:text="@string/repository"
                            android:textAlignment="center"
                            android:textSize="16sp" />

                    </com.facebook.shimmer.ShimmerFrameLayout>

                    <com.facebook.shimmer.ShimmerFrameLayout
                        android:id="@+id/shimmer_follower"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="8dp"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        app:shimmer_auto_start="true"
                        app:shimmer_direction="left_to_right"
                        app:shimmer_duration="1500">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="8dp"
                            android:text="@string/follower"
                            android:textAlignment="center"
                            android:textSize="16sp" />

                    </com.facebook.shimmer.ShimmerFrameLayout>

                    <com.facebook.shimmer.ShimmerFrameLayout
                        android:id="@+id/shimmer_following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="8dp"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        app:shimmer_auto_start="true"
                        app:shimmer_direction="left_to_right"
                        app:shimmer_duration="1500">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="8dp"
                            android:text="@string/following"
                            android:textAlignment="center"
                            android:textSize="16sp" />

                    </com.facebook.shimmer.ShimmerFrameLayout>
                </TableRow>
            </TableLayout>

            <ImageView
                android:id="@+id/ivWebLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/go_toProfile"
                android:paddingTop="16dp"
                android:paddingHorizontal="20dp"
                android:rotation="-25"
                android:src="@drawable/baseline_shortcut_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/share"
                android:paddingVertical="10dp"
                android:paddingHorizontal="20dp"
                android:rotation="-25"
                android:src="@drawable/baseline_share_24"
                app:layout_constraintStart_toStartOf="@+id/ivWebLink"
                app:layout_constraintTop_toBottomOf="@+id/ivWebLink" />

            <ImageView
                android:id="@+id/ivFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/share"
                android:paddingHorizontal="20dp"
                android:src="@drawable/baseline_favorite_24"
                app:layout_constraintStart_toStartOf="@+id/ivShare"
                app:layout_constraintTop_toBottomOf="@+id/ivShare" />

            <ImageView
                android:id="@+id/ivAvatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/user_avatar"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivAvatar"
                tools:text="Username" />

            <TextView
                android:id="@+id/tvbio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvName"
                tools:text="Type" />

            <TableLayout
                android:id="@+id/table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tvbio">

                <TableRow tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/tvPublic"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="8dp"
                        android:text="@string/repository"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvFollower"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="8dp"
                        android:text="@string/follower"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvFollowing"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="8dp"
                        android:text="@string/following"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                </TableRow>
            </TableLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@+id/containerview"
            app:tabGravity="fill"
            app:tabMode="fixed" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>